syntax = "proto3";

package auth;

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  string message = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string message = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message RefreshRequest {
  string refresh_token = 1;
}

message RefreshResponse {
  string message = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message LogoutRequest {
  string refresh_token = 1;
}

message LogoutResponse {
  string message = 1;
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  bool valid = 1;
  string username = 2;
  string error = 3;
}